objects/Supplier__x.object
<CustomObject>
    <externalDataSource>awsDynamodbXds</externalDataSource>
    <externalName>northwind</externalName>
    <fields>
        <fullName>Address__c</fullName>
        <externalDeveloperName>address</externalDeveloperName>
        <label>Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <externalDeveloperName>city</externalDeveloperName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <externalDeveloperName>companyName</externalDeveloperName>
        <label>Company Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <externalDeveloperName>contactName</externalDeveloperName>
        <label>Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <externalDeveloperName>contactTitle</externalDeveloperName>
        <label>Contact Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <externalDeveloperName>country</externalDeveloperName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Page__c</fullName>
        <externalDeveloperName>homePage</externalDeveloperName>
        <label>Home Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <externalDeveloperName>phone</externalDeveloperName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <externalDeveloperName>region</externalDeveloperName>
        <label>Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplierID__c</fullName>
        <externalDeveloperName>supplier</externalDeveloperName>
        <label>Supplier ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Supplier</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Company_Name__c</columns>
        <columns>Phone__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Contact_Title__c</columns>
        <columns>Home_Page__c</columns>
        <columns>SupplierID__c</columns>
        <columns>ExternalId</columns>
        <columns>Country__c</columns>
        <columns>Region__c</columns>
        <columns>City__c</columns>
        <columns>Address__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Suppliers</pluralLabel>
</CustomObject>